add html structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,110 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
 
+    <header>
+        <div class="logo"></div>
+        <div></div>
+        <h1></h1>
+        <p></p>
+        <button></button>
+    </header>
+
+    <section>
+        <div></div>
+        <img src="" alt="">
+        <h3><span></span></h3>
+        <p></p>
+    </section>
+
+    <main>
+        <h2></h2>
+        <p></p>
+        <div>
+            <div>
+                <h3></h3>
+                <img src="" alt="">
+                <button></button>
+            </div>
+            <div>
+                <h3></h3>
+                <img src="" alt="">
+                <button></button>
+            </div>
+            <div>
+                <h3></h3>
+                <img src="" alt="">
+                <button></button>
+            </div>
+        </div>
+    </main>
+
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <section>
+        <div>
+            <div>
+                <i></i>
+                <h3></h3>
+                <p></p>
+            </div>
+            <div>
+                <i></i>
+                <h3></h3>
+                <p></p>
+            </div>
+            <div>
+                <i></i>
+                <h3></h3>
+                <p></p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <p></p>
+        </div>
+        <div>
+            <i></i>
+            <p></p>
+        </div>
+        <div>
+            <i></i>
+            <p></p>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <p></p>
+            <div></div>
+            <div></div>
+            <p></p>
+        </div>
+    </section>
+
+    <footer>
+        <p></p>
+        <div></div>
+        <div>
+            <i></i>
+            <p></p>
+        </div>
+    </footer>
 </body>
 
 </html>
