--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <li class="nav__item"><a href="#" class='nav__link'>over ons</a></li>
             <li class="nav__item"><a href="#" class='nav__link'>diensten</a></li>
             <li class="nav__item"><a href="#" class='nav__link'>contact</a></li>
-            <li class="nav__item"><a href="#" class='nav__link'><i class="fas fa-mobile-alt nav__icon"></i><span
-                        class="nav__icon--selected">+31
-                        684481736</span></a></li>
+            <li class="nav__item"><a href="#" class='nav__link nav__link-mobile'><i
+                        class="fas fa-mobile-alt nav__icon"></i><span class="nav__icon-mobile">+31 684481736</span></a>
+            </li>
         </ul>
     </nav>
 
