add about section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,17 @@
                 class="fas fa-long-arrow-alt-right btn__arrow"></i></button>
     </header>
 
-    <section>
-        <div></div>
-        <img src="" alt="">
-        <h3><span></span></h3>
-        <p></p>
+    <section class="about">
+        <div class="about__nav">over ons</div>
+
+        <h3 class="about__heading">Wij zorgen voor een <span class="about__heading--color">uitgebreide schoonmaak</span>
+            van kantoren en bedrijfspanden.</h3>
+        <p class="about__text">Een professioneel kantoorreinigingsbedrijf zorgt ervoor dat u zich nooit zorgen hoeft te
+            maken over het omgaan met de chaos die gepaard gaat met wanorde. Bedenk dat een schone en opgeruimde
+            werkplek bijdraagt ​​aan meer efficiëntie en effectiviteit! Zorg er nu voor dat u uw klanten altijd
+            zorgeloos kunt ontvangen, zonder na te denken of het kantoor netjes is. Wij zorgen ervoor dat uw bedrijf
+            elke dag schoon is!</p>
+        <div class="about__photo"></div>
     </section>
 
     <main>
