--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li class="nav__item"><a href="#" class='nav__link'>diensten</a></li>
             <li class="nav__item"><a href="#" class='nav__link'>contact</a></li>
             <li class="nav__item"><a href="#" class='nav__link nav__link-mobile'><i
-                        class="fas fa-mobile-alt nav__icon"></i><span class="nav__icon-mobile">+31 684481736</span></a>
+                        class="fas fa-mobile-alt nav__icon"></i><span class="nav__icon-number">+31 684481736</span></a>
             </li>
         </ul>
     </nav>
@@ -124,12 +124,15 @@
         </div>
     </section>
 
-    <footer>
-        <p></p>
-        <div></div>
-        <div>
-            <i></i>
-            <p></p>
+    <footer class="footer">
+        <div class="footer__logo"></div>
+        <div class="footer__link-mobile">
+            <i class="fas fa-mobile-alt footer__icon"></i>
+            <p>+31 684681736</p>
+        </div>
+
+        <p class="footer__signature">copyright &copy; 2020 leezon`</p>
+
         </div>
     </footer>
     <script src="js/main.js"></script>
