--- a/index.html
+++ b/index.html
@@ -101,19 +101,21 @@
         </div>
     </section>
 
-    <section>
-        <div>
-            <p></p>
+    <div class="contact">
+        <p class="contact__label">Heb je nog vragen?
+            Neem contact op :)
+        </p>
+        <div class="contact__options">
+            <div class="contact__option">
+                <i class="fas fa-mobile-alt contact__icon"></i>
+                <p class="contact__mobile-number">+31 684681736</p>
+            </div>
+            <div class="contact__option">
+                <i class="far fa-envelope contact__icon"></i>
+                <p class="contact__mail">Dajana.Franke27@gmail.com</p>
+            </div>
         </div>
-        <div>
-            <i></i>
-            <p></p>
-        </div>
-        <div>
-            <i></i>
-            <p></p>
-        </div>
-    </section>
+    </div>
 
     <section>
         <div>
