add opinions section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li class="nav__item"><a href="#" class='nav__link'>diensten</a></li>
             <li class="nav__item"><a href="#" class='nav__link'>contact</a></li>
             <li class="nav__item"><a href="#" class='nav__link nav__link-mobile'><i
-                        class="fas fa-mobile-alt nav__icon"></i><span class="nav__icon-number">+31 684481736</span></a>
+                        class="nav__icon fas fa-mobile-alt"></i><span class="nav__icon-number">+31 684481736</span></a>
             </li>
         </ul>
     </nav>
@@ -37,7 +37,7 @@
         </h1>
         <p class="header__text">leer ons beter kennen</p>
         <button class="btn"><span class="btn__text">Bekijk meer</span><i
-                class="fas fa-long-arrow-alt-right btn__arrow"></i></button>
+                class="btn__arrow fas fa-long-arrow-alt-right"></i></button>
     </header>
 
     <section class="about">
@@ -107,29 +107,35 @@
         </p>
         <div class="contact__options">
             <div class="contact__option">
-                <i class="fas fa-mobile-alt contact__icon"></i>
+                <i class="contact__icon fas fa-mobile-alt"></i>
                 <p class="contact__mobile-number">+31 684681736</p>
             </div>
             <div class="contact__option">
-                <i class="far fa-envelope contact__icon"></i>
+                <i class="contact__icon far fa-envelope"></i>
                 <p class="contact__mail">Dajana.Franke27@gmail.com</p>
             </div>
         </div>
     </div>
 
-    <section>
-        <div>
-            <p></p>
-            <div></div>
-            <div></div>
-            <p></p>
+    <section class='opinions'>
+        <div class="opinions__wrapper">
+            <!-- <h2 class="opinions__title">meningen</h2> -->
+            <p class="opinions__opinion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptates
+                totam blanditiis at omnis? Placeat?</p>
+            <div class="opinions__arrow opinions__arrow-left"></div>
+            <div class="opinions__arrow opinions__arrow-right"></div>
+            <div class="opinions__author">
+                <p class="opinions__author-name">Adrie Lans</p>
+                <p class="opinions__author-company">Palletbedrijf LANS</p>
+            </div>
+
         </div>
     </section>
 
     <footer class="footer">
         <div class="footer__logo"></div>
         <div class="footer__link-mobile">
-            <i class="fas fa-mobile-alt footer__icon"></i>
+            <i class="footer__icon fas fa-mobile-alt"></i>
             <p>+31 684681736</p>
         </div>
 
