change button look

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <h1 class="header__title">Schoonmaakdiensten <span class="header__title--color">op het hoogste niveau</span>
         </h1>
         <p class="header__text">leer ons beter kennen</p>
-        <button class="btn"><span class="btn__text">Bekijk meer</span><i
-                class="btn__arrow fas fa-long-arrow-alt-right"></i></button>
+        <button class="btn"><span class="btn__text">Bekijk meer</span>
+            <!-- <i
+                class="btn__arrow fas fa-long-arrow-alt-right"></i> -->
+        </button>
     </header>
 
     <section class="about">
