add features section

--- a/index.html
+++ b/index.html
@@ -77,28 +77,32 @@
         </div>
     </main>
 
-    <div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <!-- <div class="wave"> -->
+
     </div>
 
-    <section>
-        <div>
-            <div>
-                <i></i>
-                <h3></h3>
-                <p></p>
+    <section class="features">
+        <div class="features__wrapper">
+            <div class="features__item">
+                <div class="features__illustration features__illustration-monitor"></div>
+                <h3 class="features__title">De beste kwaliteit</h3>
+                <p class="features__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro libero fuga
+                    maiores sit corporis sint amet vitae, obcaecati adipisci molestiae reprehenderit ea reiciendis,
+                    possimus laborum maxime est culpa ut aut?</p>
             </div>
-            <div>
-                <i></i>
-                <h3></h3>
-                <p></p>
+            <div class="features__item">
+                <div class="features__illustration features__illustration-contact"></div>
+                <h3 class="features__title">Snell contact</h3>
+                <p class="features__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro libero fuga
+                    maiores sit corporis sint amet vitae, obcaecati adipisci molestiae reprehenderit ea reiciendis,
+                    possimus laborum maxime est culpa ut aut?</p>
             </div>
-            <div>
-                <i></i>
-                <h3></h3>
-                <p></p>
+            <div class="features__item">
+                <div class="features__illustration features__illustration-satisfaction"></div>
+                <h3 class="features__title">Tevreden klanten</h3>
+                <p class="features__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro libero fuga
+                    maiores sit corporis sint amet vitae, obcaecati adipisci molestiae reprehenderit ea reiciendis,
+                    possimus laborum maxime est culpa ut aut?</p>
             </div>
         </div>
     </section>
