add main section services

--- a/index.html
+++ b/index.html
@@ -55,24 +55,27 @@
         <div class="about__photo"></div>
     </section>
 
-    <main>
-        <h2></h2>
-        <p></p>
-        <div>
-            <div>
-                <h3></h3>
-                <img src="" alt="">
-                <button></button>
+    <main class="services">
+        <h2 class="services__heading"><span class="services__heading--color">Onze</span> diensten</h2>
+        <p class="services__describtion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint veritatis,
+            similique porro ea enim quis quibusdam voluptatum corporis sapiente quia.
+        </p>
+        <div class="services__wrapper">
+            <div class="services__item">
+                <h3 class="services__title">Kantoorschoonmaak </h3>
+                <p class="services__text"></p>
+                <button class="services__btn">Bekijk meer</button>
             </div>
-            <div>
-                <h3></h3>
-                <img src="" alt="">
-                <button></button>
+            <div class="services__item">
+                <h3 class="services__title">Schoonmaak van restaurants en kantines</h3>
+                <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
+                    deserunt expedita illo minus totam.</p>
+                <button class="services__btn">Bekijk meer</button>
             </div>
-            <div>
-                <h3></h3>
-                <img src="" alt="">
-                <button></button>
+            <div class="services__item">
+                <h3 class="services__title">Schoonmaken van huizen en appartementen</h3>
+                <p class="services__text"></p>
+                <button class="services__btn">Bekijk meer</button>
             </div>
         </div>
     </main>
