make navigation work

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <span></span>
         </div>
         <ul class="nav__list">
-            <li class="nav__item"><a href="#" class='nav__link'>home</a></li>
-            <li class="nav__item"><a href="#" class='nav__link'>over ons</a></li>
-            <li class="nav__item"><a href="#" class='nav__link'>diensten</a></li>
-            <li class="nav__item"><a href="#" class='nav__link'>contact</a></li>
-            <li class="nav__item"><a href="#" class='nav__link nav__link-mobile'><i
+            <li class="nav__item"><a href="#" class='nav__link' data-option='header'>home</a></li>
+            <li class="nav__item"><a href="#" class='nav__link' data-option='about'>over ons</a></li>
+            <li class="nav__item"><a href="#" class='nav__link' data-option='services'>diensten</a></li>
+            <li class="nav__item"><a href="#" class='nav__link' data-option='contact'>contact</a></li>
+            <li class="nav__item"><a href="tel:+31684481736" class='nav__link nav__link-mobile'><i
                         class="nav__icon fas fa-mobile-alt"></i><span class="nav__icon-number">+31 684481736</span></a>
             </li>
         </ul>
@@ -117,7 +117,7 @@
         <div class="contact__options">
             <div class="contact__option">
                 <i class="contact__icon fas fa-mobile-alt"></i>
-                <p class="contact__mobile-number">+31 684681736</p>
+                <a href="tel:+31684481736" class="contact__mobile-number">+31 684681736</a>
             </div>
             <div class="contact__option">
                 <i class="contact__icon far fa-envelope"></i>
@@ -145,14 +145,14 @@
         <div class="footer__logo"></div>
         <div class="footer__link-mobile">
             <i class="footer__icon fas fa-mobile-alt"></i>
-            <p>+31 684681736</p>
+            <a href="tel:+31684481736">+31 684681736</a>
         </div>
 
         <p class="footer__signature">copyright &copy; 2020 leezon`</p>
 
         </div>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 
 </html>
