--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         </div>
     </footer>
     <script src="js/navigation.js"></script>
+    <script src="js/animations.js"></script>
 </body>
 
 </html>
