--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <h2 class="preloader__text">Pagina wordt geladen...</h2>
+        <div class="preloader__image"></div>
+    </div>
     <nav class="nav">
         <div class="nav__logo"></div>
         <div class="nav__menu">
@@ -151,6 +155,7 @@
 
         </div>
     </footer>
+    <script src="js/preloader.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/opinions.js"></script>
