--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <div class="preloader">
+    <!-- <div class="preloader">
         <h2 class="preloader__text">Pagina wordt geladen...</h2>
         <div class="preloader__image"></div>
-    </div>
+    </div> -->
     <nav class="nav">
         <div class="nav__logo"></div>
         <div class="nav__menu">
