--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
-        integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="
+        sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <!-- <div class="preloader">
-        <h2 class="preloader__text">Pagina wordt geladen...</h2>
-        <div class="preloader__image"></div>
-    </div> -->
+    <div class="preloader">
+        <div class="preloader__container">
+            <div class="preloader__dot"></div>
+            <div class="preloader__dot"></div>
+            <div class="preloader__dot"></div>
+        </div>
+    </div>
     <nav class="nav">
         <div class="nav__logo"></div>
         <div class="nav__menu">
