chore: add accessible name for buttons; change heading elements order

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <nav class="nav">
         <div class="nav__logo"></div>
-        <button class="nav__menu">
+        <button class="nav__menu" aria-label="Open menu">
             <span></span>
             <span></span>
             <span></span>
@@ -51,8 +51,8 @@
 
     <section class="about">
         <div class="about__nav">over ons</div>
-        <h3 class="about__heading">Wij zorgen voor een <span class="about__heading--color">uitgebreide schoonmaak</span>
-            van kantoren en bedrijfspanden.</h3>
+        <h2 class="about__heading">Wij zorgen voor een <span class="about__heading--color">uitgebreide schoonmaak</span>
+            van kantoren en bedrijfspanden.</h2>
         <p class="about__text">Een professioneel kantoorreinigingsbedrijf zorgt ervoor dat u zich nooit zorgen hoeft te
             maken over het omgaan met de chaos die gepaard gaat met wanorde. Bedenk dat een schone en opgeruimde
             werkplek bijdraagt ​​aan meer efficiëntie en effectiviteit! Zorg er nu voor dat u uw klanten altijd
@@ -135,8 +135,10 @@
     <section class='opinions lazy-background'>
         <div class="opinions__wrapper">
             <p class="opinions__opinion"></p>
-            <button class="opinions__arrow opinions__arrow-left" data-direction="left"></button>
-            <button class="opinions__arrow opinions__arrow-right" data-direction="right"></button>
+            <button class="opinions__arrow opinions__arrow-left" data-direction="left"
+                aria-label="Previous opinion"></button>
+            <button class="opinions__arrow opinions__arrow-right" data-direction="right"
+                aria-label="Next opinion"></button>
             <div class="opinions__author">
                 <p class="opinions__author-name"></p>
                 <p class="opinions__author-company"></p>
