feat: add possibility to show service describtion

--- a/index.html
+++ b/index.html
@@ -63,20 +63,28 @@
         </p>
         <div class="services__wrapper">
             <div class="services__item services__item-1 lazy-background">
-                <h3 class="services__title">Kantoorschoonmaak </h3>
-                <p class="services__text"></p>
-                <button class="services__btn">Bekijk meer</button>
+                <div class="services__item-wrapper">
+                    <h3 class="services__title">Schoonmaken van kantoren</h3>
+                    <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
+                        deserunt expedita illo minus totam.</p>
+                    <button class="services__btn">Bekijk meer</button>
+                </div>
             </div>
             <div class="services__item services__item-2 lazy-background">
-                <h3 class="services__title">Schoonmaak van restaurants en kantines</h3>
-                <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
-                    deserunt expedita illo minus totam.</p>
-                <button class="services__btn">Bekijk meer</button>
+                <div class="services__item-wrapper">
+                    <h3 class="services__title">Schoonmaak van restaurants en kantines</h3>
+                    <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
+                        deserunt expedita illo minus totam.</p>
+                    <button class="services__btn">Bekijk meer</button>
+                </div>
             </div>
             <div class="services__item services__item-3 lazy-background">
-                <h3 class="services__title">Schoonmaken van huizen en appartementen</h3>
-                <p class="services__text"></p>
-                <button class="services__btn">Bekijk meer</button>
+                <div class="services__item-wrapper">
+                    <h3 class="services__title">Schoonmaken van huizen en apartamenten</h3>
+                    <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit
+                        deserunt expedita illo minus totam.</p>
+                    <button class="services__btn">Bekijk meer</button>
+                </div>
             </div>
         </div>
     </main>
@@ -157,6 +165,7 @@
     <script src="js/preloader.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/animations.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/opinions.js"></script>
 </body>
 
