chore: remove stray end tags

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             werkplek bijdraagt ​​aan meer efficiëntie en effectiviteit! Zorg er nu voor dat u uw klanten altijd
             zorgeloos kunt ontvangen, zonder na te denken of het kantoor netjes is. Wij zorgen ervoor dat uw bedrijf
             elke dag schoon is!</p>
-        <img src="img/aboutus-bg.jpg" alt="Cleaning the sink" class="about__photo"></img>
+        <img src="img/aboutus-bg.jpg" alt="Cleaning the sink" class="about__photo">
     </section>
     <main class="services">
         <h2 class="services__heading"><span class="services__heading--color">Onze</span> diensten</h2>
@@ -88,7 +88,6 @@
             </div>
         </div>
     </main>
-    </div>
     <section class="features">
         <div class="features__wrapper">
             <div class="features__item">
@@ -137,7 +136,7 @@
             <input type="submit" value="Sturen" class=" contact__btn">
         </form>
     </div>
-    <section class='opinions lazy-background'>
+    <div class='opinions lazy-background'>
         <div class="opinions__wrapper">
             <p class="opinions__opinion"></p>
             <button class="opinions__arrow opinions__arrow-left" data-direction="left"
@@ -151,7 +150,7 @@
         </div>
         <div class="opinions__counter-container"><span id="current-opinion"></span>/<span id="opinions-length"></span>
         </div>
-    </section>
+    </div>
     <footer class="footer">
         <div class="footer__logo"></div>
         <div class="footer__link-mobile">
@@ -159,7 +158,6 @@
             <a href="tel:+31684481736">+31 684681736</a>
         </div>
         <p class="footer__signature">copyright &copy; 2020 leezon`</p>
-        </div>
     </footer>
     <script src="js/lazyLoad.js"></script>
     <script src="js/preloader.js"></script>
