--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Schoonmaakbedrijf Dayen</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="
@@ -32,8 +32,7 @@
             <li class="nav__item"><a href="#" class='nav__link' data-option='about'>over ons</a></li>
             <li class="nav__item"><a href="#" class='nav__link' data-option='services'>diensten</a></li>
             <li class="nav__item"><a href="#" class='nav__link' data-option='contact'>contact</a></li>
-            <li class="nav__item"><a href="tel:+31684481736" class='nav__link nav__link-mobile'><i
-                        class="nav__icon fas fa-mobile-alt"></i><span class="nav__icon-number">+31 684481736</span></a>
+            <li class="nav__item"><a href="tel:+31684481736" class='nav__link nav__link-mobile'><i class="nav__icon fas fa-mobile-alt"></i><span class="nav__icon-number">+31 684481736</span></a>
             </li>
         </ul>
     </nav>
@@ -42,8 +41,7 @@
         <h1 class="header__title">Schoonmaakdiensten <span class="header__title--color">op het hoogste niveau</span>
         </h1>
         <p class="header__text">leer ons beter kennen</p>
-        <button class="btn"><span class="btn__text">Bekijk meer</span>
-        </button>
+        <button class="btn">Bekijk meer</button>
     </header>
     <section class="about">
         <div class="about__nav">over ons</div>
@@ -123,8 +121,7 @@
                     +31 684681736
                 </p>
             </a>
-            <p class="contact__heading contact__heading-mail">Stuur ons desgewenst een bericht <i
-                    class="fas fa-arrow-circle-right"></i></p>
+            <p class="contact__heading contact__heading-mail">Stuur ons desgewenst een bericht <i class="fas fa-arrow-circle-right"></i></p>
         </div>
         <form action="" class="contact__form">
             <label for="name" class="contact__label">Uw naam:</label>
@@ -139,10 +136,8 @@
     <div class='opinions lazy-background'>
         <div class="opinions__wrapper">
             <p class="opinions__opinion"></p>
-            <button class="opinions__arrow opinions__arrow-left" data-direction="left"
-                aria-label="Previous opinion"></button>
-            <button class="opinions__arrow opinions__arrow-right" data-direction="right"
-                aria-label="Next opinion"></button>
+            <button class="opinions__arrow opinions__arrow-left" data-direction="left" aria-label="Previous opinion"></button>
+            <button class="opinions__arrow opinions__arrow-right" data-direction="right" aria-label="Next opinion"></button>
             <div class="opinions__author">
                 <p class="opinions__author-name"></p>
                 <p class="opinions__author-company"></p>
